<resources>
    <string name="app_name">My Application</string>
    <string name="lblPassword">Enter Your Password:</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_save">Save</string>
    <string name="btn_load">Load</string>
    <string name="lblMessage">Secret Message:</string>
    <string name="lblChangePassword">Change your password:</string>
    <string name="lblSetPassword">Set your password:</string>
    <string name="btn_back">Back to main view</string>
</resources>