<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/lblMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMessage"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />

    <EditText
        android:id="@+id/txtNotes"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor"
        android:autofillHints="type your message" />

    <Button
        android:id="@+id/btnSaveMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnLoadMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_load" />

    <TextView
        android:id="@+id/lblChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lblChangePassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="type new password"
        android:layout_marginBottom="8dp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSavePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_save" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        tools:ignore="MissingConstraints" />
</LinearLayout>